2022-10-01    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Monochromatic TGA could be written.

2022-09-29    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Monochromatic TGA could be read.

2022-09-28    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * PerlMagick/t/input_mono.tga Added monochromatic TGA sample generated
	by Graphics Workshop.

2022-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts, www/Makefile.am: Fixes pertaining to use of Docutils to
	generate the HTML documentation.

2022-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Search for a usable Python program, and then use
	it to execute Python scripts. This avoids depending on a default
	name.

	* magick/common.h (MAGICK_FUNC_MALLOC_2ARG): Add macros to support
	GCC malloc attributes which accept arguments.

2022-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/formats.rst: Add AVIF image file format to the list.

2022-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/formats.rst: Add JPEG XL to the list.

	* utilities/tests/icc-transform.tap: Preserve output files from
	icc-transform.tap until 'make clean' in order to allow inspection.

2022-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Disable using libxml2 in oss-fuzz
	build due to it being arbitrarily broken in the oss-fuzz build for
	several weeks with no solution offered.  Nobody seems to care any
	more.

	* coders/svg.c: Re-enable support for XML internal subset.

2022-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (Magick::Image::colorMapSize): Restore
	non-const Image::colorMapSize() since it caused an ABI change.
	Debian bug 1019158: "graphicsmagick breaks gnudatalanguage
	autopkgtest: undefined symbol: _ZN6Magick5Image12colorMapSizeEv".

2022-09-04    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * jpeg/* Upgraded jpeg library to Version 9e 16-Jan-2022.
