@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220925"
-#define public MagickPackageReleaseDate "snapshot-20220925"
+#define public MagickPackageVersionAddendum ".020221001"
+#define public MagickPackageReleaseDate "snapshot-20221001"
